csv interface, clean up